Add formatters and reformat the code